--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.profile{
+    
+    background-color: white;
+    width: 400px;
+    height: 500px;
+}
+.sign{
+    
+    width: 400px;
+    height: 500px;
+}
