--- a/src/index.css
+++ b/src/index.css
@@ -2,14 +2,30 @@
 @tailwind components;
 @tailwind utilities;
 
-.profile{
+
+@media screen and (min-width: 700px) {
+    .sign{
     
-    background-color: white;
-    width: 400px;
-    height: 500px;
-}
-.sign{
+        width: 400px;
+        height: 500px;
+    }
+    .profile{
     
-    width: 400px;
-    height: 500px;
-}
+        background-color: white;
+        width: 400px;
+        height: 500px;
+    }
+  }
+  @media screen and (max-width: 700px) {
+    .sign{
+    
+        width: 250px;
+        height: 350px;
+    }
+    .profile{
+    
+        background-color: white;
+        width: 250px;
+        height: 350px;
+    }
+  }
