--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,11 @@
         width: 400px;
         height: 500px;
     }
+    .show{
+    
+        width: 400px;
+        height: 500px;
+    }
     .profile{
     
         background-color: white;
@@ -21,6 +26,11 @@
     
         width: 300px;
         height: 400px;
+    }
+    .show{
+    
+        width: 350px;
+        height: 450px;
     }
     .profile{
     
