--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,11 @@
         width: 400px;
         height: 500px;
     }
+    .box{
+    
+        width: 300px;
+        height: 300px;
+    }
     .profile{
     
         background-color: white;
@@ -29,8 +34,13 @@
     }
     .show{
     
-        width: 350px;
-        height: 450px;
+        width: 325px;
+        height: 425px;
+    }
+    .box{
+    
+        width: 225px;
+        height: 225px;
     }
     .profile{
     
